# Quail

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  request.json
.cache/clangd/index/: main.c.CD7FD2B82B97A505.idx  my_function.c.3FE6C597FDA96BFF.idx  my_header.h.9EC46BD5B65605C6.idx  screamer.c.F7521A8DE7B6B7D8.idx  screamer.h.C5D4EAF5A1A89185.idx  server.c.8BB80A5256812D00.idx  tflop.c.7321A01B0E6EB4CE.idx  tflop.h.821EBC37A9651056.idx
include/: tflop.h
src/: main.c  server.c  tflop.c
